added half navbar

--- a/index.html
+++ b/index.html
@@ -6,11 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books & More. Best Offers!</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
         <nav>
-
+          <div id="logo">
+            <a href="">
+                <img src="./assets/flipkart logo.png" alt="logo img">
+                <span>Explore</span> 
+                <span>Plus
+                    <img class="inline" src="./assets/logo plus.png" alt="plus logo">
+                </span>
+            </a>
+          </div>
+          <div id="search">
+            <div>
+                <input type="text" placeholder="Search for products, brands and more">
+            </div>
+            <div>
+                <button><img src="./assets/search icon.svg" alt=""></button>
+            </div>
+          </div>
+          <div id="login">
+            <button>Login</button>
+          </div>
+          <div id="seller">
+            <a href="">
+                <span>Become a Seller</span>
+            </a>
+          </div>
+          <div id="more"></div>
+          <div id="cart"></div>
         </nav>
     </header>
     
