Completed uppar nav bar

--- a/index.html
+++ b/index.html
@@ -29,15 +29,26 @@
             </div>
           </div>
           <div id="login">
-            <button>Login</button>
+            <button><h4>Login</h4></button>
           </div>
           <div id="seller">
             <a href="">
                 <span>Become a Seller</span>
             </a>
           </div>
-          <div id="more"></div>
-          <div id="cart"></div>
+          <div id="more">
+            <a href="">
+              <span>More</span>
+              <!-- <img src="./assets/angle-down-solid.svg" alSt=""> -->
+              <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+          </a>
+          </div>
+          <div id="cart">
+          <a href="">
+            <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+            <span>Cart</span>
+        </a>
+      </div>
         </nav>
     </header>
     
