added ads section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books & More. Best Offers!
   </title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/carasol.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -61,46 +62,103 @@
       <br>
       <br>
       <br>
-      
+
       <div class="Lower_Nav_bar">
-       <div class="grid-container">
-        <div class="low-nav-img-size">
-          <img  class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100" alt="">
-          <span>Grocery</span>
-        </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100" alt="">
-          <span>Mobiles</span>
-        </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0d75b34f7d8fbcb3.png?q=100" alt="">
-        <span>Fashion </span><i class="fa-solid fa-angle-down" style="color: #212121;"></i>
-        
-      </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
-          <span>Electronics </span><i class="fa-solid fa-angle-down" style="color: #212121;"></i>
-        </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100" alt="">
-          <span>Home </span><i class="fa-solid fa-angle-down" style="color: #212121;"></i>
-        </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100" alt="">
-          <span>Appliances</span>
+        <div class="grid-container">
+          <div class="low-nav-img-size">
+            <img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Grocery</span></div>
           </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100" alt="">
-         <span>Travel</span>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Mobiles</span></div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0d75b34f7d8fbcb3.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Fashion </span>
+              <i class="fa-solid fa-angle-down" style="color: #212121;"></i>
+            </div>
+
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Electronics </span>
+              <i class="fa-solid fa-angle-down" style="color: #212121;"></i>
+            </div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100" alt="">
+            <div class="low-nav-text-container"><span>Home </span><i class="fa-solid fa-angle-down"
+                style="color: #212121;"></i></div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Appliances</span></div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Travel</span></div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Top Offers</span></div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Beauty, Toys & More</span>
+            </div>
+          </div>
+          <div class="low-nav-img-size"><img class="low-nav-img-size"
+              src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/05d708653beff580.png?q=100" alt="">
+            <div class="low-nav-text-container"><span>Two Wheelers</span></div>
+          </div>
         </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size"src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
-        <span>Top Offers</span>
-      </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100" alt="">
-        <span>Beauty, Toys & More</span>
-      </div>
-        <div class="low-nav-img-size"><img class="low-nav-img-size" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/05d708653beff580.png?q=100" alt="">
-        <span>Two Wheelers</span>
-      </div>
-       </div>
       </div>
     </nav>
   </header>
+  <div class="gap"></div>
 
+   <!-- Testing carasol !!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
+   <section>
+   <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://assets.thehansindia.com/h-upload/2019/09/19/217781-dhoni.webp" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://media.istockphoto.com/id/517188688/photo/mountain-landscape.jpg?s=612x612&w=0&k=20&c=A63koPKaCyIwQWOTFBRWXj_PwCrR4cEoOw2S9Q7yVl8=" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://images.freeimages.com/images/previews/ac9/railway-hdr-1361893.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+  
+  </div>
+  <br>
+  
+  <div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+  </div>
+</section>
+
+<section>
+  <div class="ads-section">
+    <img src="./assets/ad.png" alt="ad">
+  </div>
+</section>
+
+
+  
+  <script src="./javascript/carasol.js"></script>
 </body>
 
 </html>
